--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <!-- logo -->
               <!-- social -->
               <ul class="ds-social">
-                <li><a href="mailto:ivanjo.aravena@gmail.com?subject=Coloque%20aqu%C3%AD%20su%20tema&body=Hola%20Ivan" target="_blank"><i class="ri-mail-fill"></i></a></li>
+                <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSGLdlnjxkCkqNVlGdfCZfhKcsDXbZGtmkfgbzPzPttBRpSHZVlkqJSHkfPqRlBlfsrNmnnH" target="_blank"><i class="ri-mail-fill"></i></a></li>
                 <li><a href="https://wa.me/584149902737?text=Hola%20te%20contacto%20por%20tu%20curriculum" target="_blank"><i class="ri-phone-fill"></i></a></li>
                 <li><a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BxOVWBAkzR3GUWDRCft1SyQ%3D%3D" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
               </ul>
@@ -217,7 +217,7 @@
           <span>Estar en contacto</span>
           <h4>¿Deseas contactarme?</h4>
           <p>Esta es mi direccion de correo electronico</p>
-          <a href="mailto:ivanjo.aravena@gmail.com?subject=Coloque%20aqu%C3%AD%20su%20tema&body=Hola%20Ivan" class="ds-button">¡Contactar!</a>
+          <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSGLdlnjxkCkqNVlGdfCZfhKcsDXbZGtmkfgbzPzPttBRpSHZVlkqJSHkfPqRlBlfsrNmnnH" class="ds-button">¡Contactar!</a>
         </section>
 
         <!--<span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
