--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <!-- social -->
               <ul class="ds-social">
                 <li><a href="mailto:ivanjo.aravena@gmail.com" target="_blank"><i class="ri-mail-fill"></i></a></li>
-                <li><a href="https://wa.me/584149902737?text=Hola%20te%20contacto%20por%20tu%20curriculum" target="_blank"><i class="ri-whatsapp-fill"></i></a></li>
+                <li><a href="https://wa.me/584265802387?text=Hola%20te%20contacto%20por%20tu%20curriculum" target="_blank"><i class="ri-whatsapp-fill"></i></a></li>
                 <li><a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BxOVWBAkzR3GUWDRCft1SyQ%3D%3D" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
               </ul>
               <!-- social -->
@@ -67,7 +67,7 @@
                     <span>Idiomas</span>
                   </li>
                   <li>
-                    <strong>21</strong>
+                    <strong>22</strong>
                     <span>Edad</span>
                   </li>
                 </ul>
@@ -85,7 +85,7 @@
             <h2 class="ds-heading">Sobre mi</h2>
             <p>Estudiante de ingeniería en busca de prácticas para ampliar mis conocimientos y obtener experiencia profesional en el área de tecnología.</p>
             <div class="ds-button-sec text-center">
-                <a href="https://drive.google.com/file/d/1afR4zeKGlN2qpZ1np-FTWlggqddRHFCv/view?usp=sharing" class="ds-button">Descargar Curriculum</a>
+                <a href="CV.pdf" class="ds-button" download="CV Ivan Aravena">Descargar Curriculum</a>
             </div>
         </section>
       </div>
