--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
-                    <strong>6to</strong>
+                    <strong>7mo</strong>
                     <span>Semestre</span>
                   </li>
                   <li>
