--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
-                    <strong>7mo</strong>
+                    <strong>9no</strong>
                     <span>Semestre</span>
                   </li>
                   <li>
@@ -67,7 +67,7 @@
                     <span>Idiomas</span>
                   </li>
                   <li>
-                    <strong>22</strong>
+                    <strong>23</strong>
                     <span>Edad</span>
                   </li>
                 </ul>
@@ -109,8 +109,10 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             <h2 class="ds-heading">Otras habilidades</h2>
             <ul class="ds-skills-list">
-              <li>Productor musical bajo el nombre de Orderly Chaos</li>
-              <li>Guitarrista con mas de 5 años de experiencia</li>
+              <li>Beca trabajo en la Escuela de Arquitectura.</li>
+              <li>Reconocimiento por clasificar entre los 5 mejores en la prueba de conocimientos en la carrera.</li>
+              <li>Guitarrista con mas de 5 años de experiencia y productor de bass music.</li>
+              <li>Aprendizaje de Francés autodidacta en progreso.</li>
             </ul>
           </div>
         </div>
