--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
              <ul class="ds-skills-list">
                <li>Especialista instalador de redes</li>
                <li>Especialista en soporte tecnico</li>
-               <li>Python: Basico</li>
-               <li>Java: Basico</li>
-               <li>C: Basico</li>
+               <li>Python: Intermedio</li>
              </ul>
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
