--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h2 class="ds-heading">Sobre mi</h2>
             <p>Estudiante de ingeniería en busca de prácticas para ampliar mis conocimientos y obtener experiencia profesional en el área de tecnología.</p>
             <div class="ds-button-sec text-center">
-                <a href="CV.pdf" class="ds-button" download="CV Ivan Aravena">Descargar Curriculum</a>
+                <a href="assets/images/CV.pdf" class="ds-button" download="CV Ivan Aravena">Descargar Curriculum</a>
             </div>
         </section>
       </div>
